--- a/Session_1_Intro.Rmd
+++ b/Session_1_Intro.Rmd
@@ -153,7 +153,7 @@ ggplot(data.frame(x = data), aes(x)) +
   labs(x = "Data", y = "Count", title = "Histogram of Simulated Data")
 ```
 
-Do not worry about the **ggplot** text for now, we will have a session on this.
+Do not worry about the **ggplot** text for now, we will have a session on this, because *ggplot* uses a slightly different syntax. We will cover that syntax but one thing we won't cover here is *shortcuts*, but you will learn them as you code more.
 
 ### Getting help in R
 
