--- a/Session_1_Intro.Rmd
+++ b/Session_1_Intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R workshop"
+title: "Modelling workshop"
 output: github_document
 ---
 
@@ -9,31 +9,72 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Session 1
 
-**Session 1** contains an introduction to R and R Studio, data types and data manipulation in R, and a brief introduction to plotting in base R.
+**Session 1** contains an introduction to **R** and **RStudio**, **data types** and **basic data manipulation** in R, with a brief introduction to **plotting** in base R.
 
-### Session 1a - Introduction to R and R Studio
-R is widely used by statisticians, data analysts, and researchers for data analysis, visualization, and machine learning.
+### Session 1a - Introduction to R and RStudio
+R is widely used by statisticians, data analysts, and researchers for data analyses and visualization.
 
-R is a programming language used for statistical computing and graphics. It was first developed by Ross Ihaka and Robert Gentleman at the University of Auckland, New Zealand in 1993, which I mention as I live in New Zealand! It is free to use and, if you know what you are doing, you can contribute to it. There are currently nearly 20,000 **packages** that people have written to do specific tasks. You can see how many here: https://cran.r-project.org/web/packages/
+#### R
 
-R Studio is an integrated development environment (IDE) for R that provides a more user-friendly interface for working with R. R Studio is a powerful tool that simplifies the process of writing R code and analyzing data. It includes features such as code highlighting, debugging, and data visualization.
+**R** is a programming language used for statistical computing and graphics. It was first developed by Ross Ihaka and Robert Gentleman at the University of Auckland, New Zealand in 1993, which I mention as I live in New Zealand.
 
-The first step is downloading and installing the software. You can download R from https://www.r-project.org/ and RStudio and R from https://posit.co/download/rstudio-desktop/
+R is free to use and, if you know what you are doing, you can contribute to it. There are currently nearly 20,000 **packages** that people have written to do specific tasks. You can see how many there are here: https://cran.r-project.org/web/packages/
 
-You should now be able to open RStudio and see a screen like this:
+#### RStudio
+
+**RStudio** is an integrated development environment (IDE) for R that provides a more user-friendly interface for working with R. RStudio is a very helpful tool that simplifies the process of writing R code and analyzing data. It includes features such as code highlighting and debugging, and helps with visualization of the different parts of R.
+
+##### Donwloading and installing R and RStudio
+
+The first step is downloading and installing the software. You can download R from https://www.r-project.org/ and RStudio *and* R from https://posit.co/download/rstudio-desktop/
+
+Once installed, you should now be able to open RStudio and see a screen like this:
+
 ![RStudio](figures/RStudio_screenshot.png)
 
 Spend a bit of time familiarizing yourselves with this screen and we will talk through this later.
 
-### Beginning 
+### Beginning to code
 
-We will start by opening RStudio and begin with some of the most basic things about R. Here are some of the most basic R functions.
+We will start by opening RStudio and begin with some of the most basic things about R. 
 
-The **print()** function is used to display the value of an object or variable on the console. For example,
+First, let's open an **R script** using two methods:
+
+`Ctrl + Shift + N'
+
+Then
+
+File > New file > R Script
+
+An R Script is simply a text file containing almost the same commands that you would enter on the *command line* of R.
+
+##### Basic R functions
+
+Here are some of the most basic R functions.
+
+The **print()** function is used to display the value of an object or variable on the console. For example, in the newly opened R Script type the below R code and then *click on*:
+
+**Run**
+
+and then use:
+
+`Control + Enter'
 
 ```{r}
 print("Hello, world!") 
 ```
+
+Now press
+
+File > Save
+
+and then use:
+
+`Control + S'
+
+To **save** the **script**.
+
+We will *not* cover **shortcuts** any more, but you will learn them as you code more with time.
 
 The **c()** function is used to create a *vector* of values. For example,
 
@@ -49,7 +90,17 @@ The **length()** function is used to determine the length of a vector or the num
 length(c(1, 2, 3))
 ```
 
-returns the number 3 because there are three numbers.
+returns the number 3 because there are three numbers. As does:
+
+```{r}
+length(c(3, 3, 3))
+```
+
+because there are three numbers that happen to be 3. Similarly, so does:
+
+```{r}
+length(c(300, 30, 3))
+```
 
 The **sum()** function is used to calculate the sum of a vector or a set of numbers. For example, 
 
@@ -75,7 +126,7 @@ mean(n1)
 mean(n2)
 ```
 
-*n2* includes an **NA**, which means Not Available, and so the function mean() cannot calculate the mean. We can easily resolve that here because mean() has a *logical* condition that we will learn more about later, but here it is *na.rm = FALSE*. We include that and get a different answer:
+*n2* includes an **NA**, which means* *Not Available*, and so the function mean() cannot calculate the mean when a number in does not exist. We can easily resolve that here because mean() has a *logical* condition that we will learn more about later, but here it is **na.rm = FALSE**. We include that and get a different answer:
 
 ```{r}
 n2 <- c(1,2,3,4,NA)
@@ -118,15 +169,15 @@ The **plot()** function is used to create a plot of data. For example,
 plot(c(1, 2, 3, 4), c(4, 5, 6, 7))
 ```
 
-will create a scatter plot of the points (1, 4), (2, 5), (3, 6) and (4, 7).
+will create a scatter plot of the points (1, 4), (2, 5), (3, 6) and (4, 7) with the first position the **x axis** values and the second position the **y axis** values.
 
-Now, R comes with some built in data sets as well as functions. We can use another function, **summary()** to see what is in one called *cars*:
+Now, R comes with some built in data sets as well as functions. We can use another function, **summary()** to see what is in one data set called *cars*:
 
 ```{r cars}
 summary(cars)
 ```
 
-And we can use this *base* plot function again to plot some of the data, for example:
+And we can use this *base* **plot()** function again to plot some of the data, for example:
 
 ```{r pressure, echo=FALSE}
 plot(pressure)
@@ -135,11 +186,11 @@ plot(pressure)
 This plot looks slightly better than our first attempt with the six numbers above, but we can make this look better. Here's an example of how:
 
 ```{r}
-plot(c(1, 2, 3, 4), c(4, 5, 6, 7), col = "blue", lwd = 10,
+plot(c(1, 2, 3, 4), c(4, 5, 6, 7), col = "blue", lwd = 5,
      main = "Main title", xlab = "Number set 1", ylab = "Number set 2")
 ```
 
-Last, in this mini session, we will *simulate* some data and plot it in **ggplot** to show you how where this is going:
+Last, in this introduction session, we will **simulate** some data and plot it in **ggplot** to show you how where this workshop tutorial is heading:
 
 ```{r}
 # Simulate data
@@ -153,11 +204,11 @@ ggplot(data.frame(x = data), aes(x)) +
   labs(x = "Data", y = "Count", title = "Histogram of Simulated Data")
 ```
 
-Do not worry about the **ggplot** text for now, we will have a session on this, because *ggplot* uses a slightly different syntax. We will cover that syntax but one thing we won't cover here is *shortcuts*, but you will learn them as you code more.
+Do not worry about the **ggplot()** text for now, we will have a session on this, because *ggplot()* uses a slightly different **syntax**.
 
 ### Getting help in R
 
-**Google** is your friend! I use Google a lot for coding. However, there are some great resources, some of which are included in the *README* file on the Github page for this, but not least https://www.r-project.org/help.html
+**Google** is your friend! I use Google *a lot* for coding. However, there are some great resources, some of which are included in the *README* file on the Github page for this, but not least https://www.r-project.org/help.html
 
 Basic help can be found in several ways within R though. This includes typing the function name in the **search** box in the **help** tab in **RStudio** or using the R help functions **help()** or simply *?*. For example,
 
@@ -171,13 +222,15 @@ takes you to a server or
 #?lm
 ```
 
+Several people in my lab have begun to use ChatGPT to get them started too.
+
 ### Packages in R
 
-In R, a package is a collection of functions, data sets, and other resources that extend the functionality of the base R software. R packages can be downloaded and installed from a variety of sources, including the Comprehensive R Archive Network (CRAN), Bioconductor, GitHub, and other online repositories.
+In R, a **package** is a collection of functions, data sets, and other resources that extend the functionality of the base R software. R packages can be downloaded and installed from a variety of sources, including the Comprehensive R Archive Network (CRAN), Bioconductor, GitHub, and other online repositories.
 
-R packages allow users to perform a wide range of specialized tasks in R, from data visualization to statistical analysis to machine learning. Some popular R packages include **ggplot2** for creating visualizations, **dplyr** for data manipulation, **tidyr** for data cleaning, and **caret** for machine learning.
+R packages allow users to perform a wide range of specialized tasks in R, from data visualization to statistical analysis to machine learning. Some popular R packages include **ggplot2** for creating visualizations, **dplyr** and **tidyr** for data cleaning and manipulation, and **caret** for machine learning.
 
-Packages in R are typically installed using the **install.packages()** function, and loaded into the R session using the **library()** function. . For example,
+Packages in R are typically installed using the **install.packages()** function, and loaded into the R session using the **library()** function. For example,
 
 ```{r}
 # Check if ggplot2 is already installed
@@ -186,9 +239,26 @@ if(!require(ggplot2)){install.packages("ggplot2")}
 # Load ggplot2 library
 library(ggplot2)
 ```
+
 Checks to see if the package is installed or not with the **require()** function and installs it if not with the **install.packages()** function, then loads the library for use using the **library()** function. 
 
-Once a package is loaded, its functions and data sets can be accessed using the package name followed by the function or data set name, separated by a period (e.g., ggplot2::ggplot()).
+You can also click on:
+
+Tools > Install packages.. 
+
+And *type* the package name or in RStudio click on:
+
+Packages > Install 
+
+And *type* the package name.
+
+Once a package is loaded, its functions and data sets can be accessed using the package name followed by the function or data set name, separated by a period. For example:
+
+```{r}
+ggplot2::ggplot()
+```
+
+Brings up and empty plot. I tend not to use packages like this, but you might see it.
 
 In addition to the packages available on public repositories, users can also create their own R packages to share their code with others or to organize their own workflows. R packages typically include documentation to explain the package's functions and usage, making it easier for others to use and contribute to the package.
 
@@ -227,7 +297,7 @@ In this script, **sample()** is used to randomly select 5 *integers* from the ra
 
 You can modify the parameters of **sample()** to generate different types of data sets with different ranges and sizes.
 
-**Character** data types in R represent *strings* of text and are used to store categorical or textual data. For example,
+**Character** data types in R represent *strings* of *text* and are used to store categorical or textual data. For example,
 
 ```{r}
 # Simulate data
@@ -241,6 +311,8 @@ data
 In this script, a **character** *vector* is created with 5 different color names. Note that here we printed the data without using the **print()** function. This is a common short cut.
 
 You can have a string of any words or numbers written as words as long as they are in quotation marks (`` ``).
+
+### Logical data and conditions
 
 **Logical** data types in R represent *Boolean* values (i.e. only two values) and are used to store binary data, such as **true/false** values or logical conditions. For example,
 
@@ -263,12 +335,14 @@ print(result2)
 print(result3)
 ```
 
-In this script, two **logical** variables *var1* and *var2* are defined with the values **TRUE** and **FALSE**, respectively. A logical vector *vector1* is also defined with 5 values.
+In this script, two **logical** variables *var1* and *var2* are defined with the values **TRUE** and **FALSE**, respectively. A logical vector called *vector1* is also defined with 5 values.
 
 Three logical functions are then performed:
 
 The **any()** function checks if any element in *vector1* is **TRUE** and returns a logical value. The result is saved in the *result1* variable.
+
 The **all()** function checks if all elements in *vector1* are **TRUE** and returns a logical value. The result is saved in the *result2* variable.
+
 The **xor()** function checks if either *var1* or *var2* is **TRUE**, *but not both*, and returns a logical value. The result is saved in the *result3* variable.
 
 Next, we will try a different way of looking at this:
@@ -281,12 +355,6 @@ var2 <- FALSE
 # Print logical variables
 print(var1)
 print(var2)
-
-# Create logical vector
-vector1 <- c(TRUE, FALSE, TRUE, FALSE, TRUE)
-
-# Print logical vector
-print(vector1)
 
 # Perform logical operations
 result1 <- var1 & var2 # AND operator
@@ -302,11 +370,19 @@ print(result3)
 
 In this script, **logical** variables *var1* and *var2* are defined with the values **TRUE** and **FALSE**, respectively. The **print()** function is used as before.
 
-A **logical** vector *vector1* is then created with 5 values.
+**Logical** operations are then performed using the **&** (AND), **|** (OR), and **!** (NOT) operators on the logical variables. 
 
-**Logical** operations are then performed using the **&** (AND), **|** (OR), and **!** (NOT) operators on the logical variables. The print() function is used to display the results of the logical operations.
+#### Warning on R syntax
 
-This is also a good place to note two other important R syntax points: R treats capital (or *upper case*) letters differently to *lower case*, so A is not the same a, meaning if you have a vector of characters or factors, Apple and apple with are different. Also, you can also assign things using the = sign instead of the *assignment operator* **<-**. So lets do one exercise to test this:
+This is also a good place to note two other important R syntax points.
+
+##### Upper case, lower case, ...
+
+R treats capital (or *upper case*) letters differently to *lower case*, so **A is not the same a**. This means that if you have a vector of characters or factors with *Apple* and *apple*, these are different. Similarly if you import a dataset that has a *space* before or after a word, it is different. So, ' Cow' is not the same as 'Cow' is not the same as ' cow' or 'cow' to R. 
+
+##### Assignment operators
+
+Also, you can also assign things using the **=** sign instead of the *assignment operator* **<-**. So lets do one exercise to test this:
 
 ```{r}
 a <- 1 # assign the number 1 to a
@@ -321,7 +397,7 @@ print(A)
 A==a
 ```
 
-This can sometimes cause some confusion, so let's try with another **last example** of logical conditions:
+This can sometimes cause some confusion, so let's try with another *last example* of logical conditions:
 
 ```{r}
 # Define variables
@@ -343,6 +419,8 @@ print(result4)
 
 In this script, two *variables* *var1* and *var2* are defined with the values 10 and 5, respectively.
 
+**Logical** conditions are then performed using the **>**, **<**, **==**, and **!=** operators on the variables. The **>** operator checks if *var1* is greater than *var2*, the **<** operator checks if *var1* is less than *var2*, the **==** operator checks if *var1* is equal to *var2*, and the **!=** operator checks if *var1* is not equal to *var2*. The results of each condition are saved in separate variables *result1*, *result2*, *result3*, and *result4*.
+
 Note that we can check the type of data these variables are by using the **class()** function.
 
 ```{r}
@@ -350,9 +428,9 @@ class(var1)
 class(var2)
 ```
 
-**Logical** conditions are then performed using the **>**, **<**, **==**, and **!=** operators on the variables. The **>** operator checks if *var1* is greater than *var2*, the **<** operator checks if *var1* is less than *var2*, the **==** operator checks if *var1* is equal to *var2*, and the **!=** operator checks if *var1* is not equal to *var2*. The results of each condition are saved in separate variables *result1*, *result2*, *result3*, and *result4*.
+#### Factors
 
-**Factor** data types in R represent categorical data with a fixed set of levels. Factors are often used to represent categorical variables in statistical analyses. For example:
+**Factor** data types in R represent categorical data with a fixed set of **levels**. Factors are often used to represent categorical variables in statistical analyses. For example:
 
 ```{r}
 # Define a factor variable
@@ -368,7 +446,7 @@ df <- data.frame(var1, var2)
 print(df)
 ```
 
-In this script, a **factor** variable *var1* is defined with 6 values representing different levels: "A", "B", and "C". A numeric variable *var2* is also defined with 6 values.
+In this script, a **factor** variable *var1* is defined with 6 values representing different levels: "A", "B", and "C". A **numeric** variable *var2* is also defined with 6 values.
 
 The two variables are then combined into a **data frame** called *df* using the **data.frame()** function. We will discuss data frames below. Note we can plot this data set using:
 
@@ -376,7 +454,11 @@ The two variables are then combined into a **data frame** called *df* using the 
 plot(df)
 ```
 
-R has built-in data types for storing and manipulating **dates** and **times**. These data types are useful for time series analysis and data visualization.
+Depending on the data and the data structure, the default **plot()** function will plot different plots. This is a **box-and-whisker** plot showing the *median* (black bar); the *interquartile range* (grey box) with the *upper* and *lower* *quartiles* and the *highest* and *lowest* values as the end bars. Note sometimes there are outliers that show as individual points. We will come back to these later in the workshop.
+
+#### Times and dates
+
+R has built-in data types for storing and manipulating **dates** and **times**. These data types are useful for time series analysis and data visualization. Let's create some data to begin with using this code:
 
 ```{r}
 # Create a date sequence for the month of May 2023
@@ -395,9 +477,11 @@ In this script, a *sequence* of **dates** is created using the **seq()** functio
 
 A *sequence* of **times** is also created using the **seq()** function, with the *start* and *end* times specified using the **as.POSIXct()** function. The **by** parameter is set to **"15 min"** to generate a sequence of times, one for each 15-minute interval throughout the day.
 
-The **head()** function is used to display the first 10 rows of the resulting data frame:
+The **head()** function is used to display the first 10 rows of the resulting data frame.
 
-We can plot time and date data too. Here's an example of some code, simulating data from a different time period just to show you:
+Note that **lubridate** is a nice way to deal with times and dates in the **tidyverse** syntax that we will come to. You can find this here for later: https://lubridate.tidyverse.org/
+
+We can plot time and date data too. Here's an example of some code, simulating data from a different time period just to show you another data series and here we will plot it with **ggplot()**:
 
 ```{r}
 # Generate some time data
@@ -412,33 +496,55 @@ ggplot(data, aes(x = time, y = value)) +
   scale_x_datetime(date_labels = "%H:%M")
 ```
 
-This script first generates some time data using the seq function to create a sequence of 15-minute intervals between January 1st and January 2nd, 2022. The **rnorm()** function is then used to generate some random values for each time point. The data is then stored in a data frame called data.
+This script first generates some time data using the **seq()** function to create a sequence of 15-minute intervals between January 1st and January 2nd, 2022. The **rnorm()** function is then used to generate some random values for each time point. The data is then stored in a *data frame* called *data*.
 
-The script then loads the **ggplot2** **library** and creates a plot of the data using **ggplot()**. We will cover ggplot later, but to start introducing the terms, the **aes()** function is used to specify that the x-axis should be the *time* variable and the y-axis should be the *value* variable. The **geom_line()** function is used to draw a line connecting the data points. Finally, the **scale_x_datetime()** function is used to format the x-axis labels as hours and minutes.
+The script then loads the **ggplot2** **library** and creates a plot of the data using **ggplot()**. We will cover **ggplot()** more later, but let's start introducing the terms; the **aes()** function is used to specify that the x-axis should be the *time* variable and the y-axis should be the *value* variable. The **geom_line()** function is used to draw a line connecting the data points. Finally, the **scale_x_datetime()** function is used to format the x-axis labels as hours and minutes.
+
+#### Lists
 
 **Lists** in R are used to store complex or structured data, such as nested data frames or ''heterogeneous'' data sets.
 
 ```{r}
 # Create a list
 my_list <- list(
-  name = "John Smith",
-  age = 35,
-  married = TRUE,
-  hobbies = c("reading", "hiking", "cooking")
+  name = "Bat 1",
+  age = 6,
+  seropositive = TRUE,
+  signs = c("dark marking", "banded")
 )
 
 # Access elements of the list
 my_list$name
 my_list$age
-my_list$married
-my_list$hobbies
+my_list$seropositive
+my_list$signs
 
 # Add an element to the list
 my_list$new_element <- "This is a new element"
 
+# check out the new element
+names(my_list)
+
 # Remove an element from the list
 my_list$age <- NULL
+
+# check the removal of 'age'
+names(my_list)
 ```
+Lists can be very useful but they are also not the most intuitive objects to work with. Let's take one look at the structure of the list using the **str()** function and use two ways to find the `Bat 1' character:
+
+```{r}
+str(my_list)
+
+# method one
+my_list$name[1]
+
+# method two
+my_list[[1]][1]
+```
+We will discuss these approaches to indexing more in the next section on arrays and matrices.
+
+#### Arrays and matrices
 
 **Arrays** and **matrices** in R are used to store data in two or more dimensions. These data types are often used in mathematical and statistical analyses.
 
@@ -468,6 +574,8 @@ The script demonstrates how to access elements of the matrix using indexing. The
 The script also creates an **array** using the **array()** function. The array contains the values 1 through 27, arranged in a 3x3x3 cube. The dim argument specifies the dimensions of the array as a vector. The array is then printed to the console using the print function.
 
 The script demonstrates how to access elements of the array using indexing like for the matrix. The element in the first row, second column, and third "layer" can be accessed using **my_array[1, 2, 3]**, and the element in the third row, first column, and second "layer" can be accessed using **my_array[3, 1, 2]**.
+
+#### Data frames
 
 Lastly, **Data frames** in R are used to store tabular data with rows and columns, *similar to a spreadsheet*. Data frames are a fundamental data structure in R and are widely used in data analysis and statistical modeling. We have seen several examples of them before. Let's look at one of R's in-built data frames, called 'cars'.
 
