--- a/Session_0_install_packages.Rmd
+++ b/Session_0_install_packages.Rmd
@@ -15,7 +15,7 @@ This will make more sense as we go through the workshop but will be run before i
 
 ```{r}
 # List of required packages
-required_packages <- c("ggplot2","epiR","clubSandwich")
+required_packages <- c("ggplot2","tidyverse","dplyr","hrbrthemes","viridis","ggpubr","GGally","ggridges","tidyr","scales","deSolve","shinySIR","epiR","pROC","mixtools","broom","ggiraphExtra","MASS","bbmle","coda","rjags",spatstat","forecast","pacman","devtools","BiocManager")
 
 # Function to check if a package is installed
 is_package_installed <- function(package_name) {
